# alphasignal-ai-news

./: .env  .gitignore  README.md  alphasignal.csv  alphasignal_logs.csv  alphasignal_mail_logs.csv  alphasignal_news_data.csv  extract_news.py  pyproject.toml
data/: mail_logs.csv  news_data.csv  news_logs.csv  topic_logs.csv
src/: Email.py  create_index.py  extract_news.py  purge_data.py  utils.py
