[project]
name = "ai-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "bs4>=0.0.2",
    "imap-tools>=1.10.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pinecone>=6.0.2",
    "python-dotenv>=1.1.0",
]
